Validation refactoring
