# app/Http/Controllers/Api/V1/CommentController.php
@@ -1,0 +1,98 @@
+<?php
+
+namespace App\Http\Controllers\Api\V1;
+
+use App\Http\Controllers\Controller;
+use App\Http\Resources\Comment as CommentResource;
+use App\Repositories\Contracts\Comments as CommentsContract;
+use Illuminate\Http\Request;
+
+class CommentController extends Controller
+{
+    /**
+     *  @OA\Get(
+     *      path="/api/v1/post/{post_id}/comment",
+     *      summary="Retrieve a list of post comments",
+     *      description="Retrieves a list of all of the post comments created on the system for a post",
+     *      operationId="comment-index",
+     *      tags={"Comment"},
+     *      @OA\Parameter(
+     *          name="post_id", in="path", required=true, description="The ID of the post you want to retrieve comments for", @OA\Schema(type="integer", default="1")
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Success",
+     *          @OA\JsonContent(
+     *              @OA\Property(
+     *                  property="data",
+     *                  type="array",
+     *                  example={
+     *                      { "user_id": 1, "full_name": "Firstname Lastname", "email_address": "email@domain.com" },
+     *                      { "user_id": 2, "full_name": "Firstname Lastname", "email_address": "email@domain.com" },
+     *                  },
+     *                  @OA\Items(
+     *                      @OA\Property(property="user_id", type="integer", example="7"),
+     *                      @OA\Property(property="full_name", type="string", example="Firstname Lastname"),
+     *                      @OA\Property(property="email_address", type="string", example="email@domain.com"),
+     *                  ),
+     *              ),
+     *          ),
+     *      )
+     *  )
+     */
+    /**
+     * Display a listing of the resource.
+     *
+     * @return \Illuminate\Http\Response
+     */
+    public function index(int $post, CommentsContract $comments_contract)
+    {
+        $comments = $comments_contract->fetchAllEntriesFromPost($post);
+        return CommentResource::collection($comments);
+    }
+
+    /**
+     * Store a newly created resource in storage.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return \Illuminate\Http\Response
+     */
+    public function store(Request $request)
+    {
+        //
+    }
+
+    /**
+     * Display the specified resource.
+     *
+     * @param  int  $id
+     * @return \Illuminate\Http\Response
+     */
+    public function show($id)
+    {
+        //
+    }
+
+    /**
+     * Update the specified resource in storage.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @param  int  $id
+     * @return \Illuminate\Http\Response
+     */
+    public function update(Request $request, $id)
+    {
+        //
+    }
+
+    /**
+     * Remove the specified resource from storage.
+     *
+     * @param  int  $id
+     * @return \Illuminate\Http\Response
+     */
+    public function destroy($id)
+    {
+        //
+    }
+}
